<resources>
    <string name="app_name">UntitledSocialGame</string>
    <string name="title_activity_register_user">Registro</string>
    <string name="publicMain">Public</string>
    <string name="recuperar_password">Recuperar Password</string>
    <string name="email">Email</string>
    <string name="irRegistro">Ir a Registro</string>
    <string name="irLogin">Ir a Login</string>
    <string name="registro">Registro</string>
    <string name="password">Password</string>
    <string name="nickname">Nickname</string>
    <string name="event_name">Nombre evento</string>
    <string name="event_desc">Descripción evento</string>
    <string name="cancelar">Cancelar</string>
    <string name="event_create">Crear Evento</string>


    //Mapa
    <string name="title_activity_google_maps">Map</string>

    //Main Activity
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    // Strings para el menú
    <string name="menu_home">Mapa</string>
    <string name="menu_miseventos">Mis Eventos</string>
    <string name="menu_misgrupos">Mis Grupos</string>
    <string name="menu_buscargrupo">Mis Eventos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_logout">Logout</string>

    <string name="login">Login</string>
</resources>
