<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/gmap">

    <fragment
        android:id="@+id/gmap"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.map.GMapFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_gmap" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.gallery.GalleryFragment"
        android:label="@string/menu_miseventos"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.gimbernat.UntitledSocialGame.scenes.boot.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>