<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp"
    android:title="@string/menu_logout"
    tools:context=".scenes.events.CreateEventActivity">



    <EditText
        android:id="@+id/nameEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/event_name" />

    <EditText
        android:id="@+id/descriptionEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/event_desc" />


    <Button
        android:id="@+id/createEvent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text="@string/event_create" />

    <Button
        android:id="@+id/goToMap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorWhite"
        android:text="@string/cancelar" />


</LinearLayout>
